--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kQtW33rZJAHjyDLR3Nq2X6CfJ9KYIe5C5eFCl7H9Nq0I4xDcmaDf4iIuTz5RZTgq"
